# ai

./: agentdevoptions.html  generatedcode.html  index.html  stage,html  stage.html  stage2  stage2.html  stage3,html  stage3.html
agents/: index.html  stage.html
agents/aiwomen/: Makefile  main.cpp  ollama.sh  readme.txt
agents/aiwomen/templates/: index.html
androidmulti/: index.html
androidstopwatch/: index.html
androidvideo/: index.html
androidvideoclicktoplay/: index.html
androidvideoclicktoplay/code/: index.html
androidvideoclicktoplay/howtouse/: index.html
androidvideoclicktoplay/requirements/: index.html
androidvideoclicktoplay/screenshots/: index.html
androidvideoentry/: index.html
androidvideoimages/: index.html
androidvideoimages/code/: index.html
androidvideoimages/requirements/: index.html
androidvideowebpagegrab/: index.html  requirements
androidvideowebpagegrab/code/: index.html
androidvideowebpagegrab/howtouse/: index.html
androidvideowebpagegrab/screenshots/: index.html
baremetal/: index.html
baremetal2/: index.html
baremetal3/: index.html
cplusplus/qt/first/: hello-world.pro.html  (+2 more)
gpt4all/: hello.cpp  hello.cpp.html  quickstart.html
kilocli/: index.html  kilo-prompt.txt  kiloAuth.sh  main.py  run.sh  setup.sh  view.html
kilocli/kiloauth/: index.html  kiloauth.sh
kilocli/kilopig/: files.txt  highscore.xml
kilocode/: setup-kilocode.sh  setup-vscode-and-kilocode.sh  testapp.html  uninstall-kilocode-and-vscode.sh  uninstall-kilocode.sh
knowledge/: agentdevoptions.html
leaders/: index.html  people.xml  stage.html
llama-cpp-python/: my_wikipedia_script.py
llama_cpp_python/: setup.sh
ollama/: cppinterface.html  maintenancetool.html  ollama.sh  quickstart.html  stage.html  test.cpp  test.cpp.html  useai.cpp  useai.cpp.html
opencode/: AgentDetails.html  Makefile  clipboard_monitor.py  homework_for_Linus.html  opencode-prompt.txt  run.sh  setup.sh
opencode/aisnapmanager/: ai-snap-manager.py
opencode/clamtkrefresh/: LICENSE
opencode/clipboard/: clipboard_monitor.py
opencode/fork/: howto-fork.txt  opencode-fork.txt
opencode/langchain/: langchain_app.py
opencode/linuxkernel/: Linux_rust_naughty_naughty.html  homework_for_Linus.html
opencode/newsagent/: AgentDetails.html
opencode/newsagent/rssagent/: CMakeLists.txt  Makefile  README.md  fetch_news.py  rssagent.html
opencode/newsagent/rssagent/example/: rssagent.cpp
opencode/newsagent/rssagent/src/: model.cpp  model.h
opencode/snippet/: snippet.cpp
opencode/tetris/: opencode-prompt.txt  vibes-next.txt  vibes.txt
python/first/: clipboardmonitor.py  index.html  oop.html  requirements.html
python/fourth/: index.html  useollama.py
python/second/: index.html  mychatapp.py  mychatapp2.py  requirements.html  stage.html
python/third/: index.html  thedr.py
stage/: index.html
(+36 files in other folders)
